Inicio de la traduccion

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -1,5 +1,34 @@
 {
   "about": "About me",
   "projects": "Projects",
-  "contact": "Contact"
+  "contact": "Contact",
+  "navbar_brand": "Levijcdf",
+  "navbar_caracteristicas": "MY FEATURES",
+  "navbar_about": "ABOUT ME",
+  "navbar_contact": "CONTACT ME",
+  "nombre": "Levi Josué Candeias de Figueiredo",
+  "titulo": "Fullstack Web Developer",
+  "presentacion": "Passionate about technology, experienced in developing modern SPA applications and secure REST APIs.Always learning and striving to add real value to projects.",
+  "perfil_tecnico": "TECHNICAL & PERSONAL PROFILE",
+  "tecnologias": "Technologies",
+  "frameworks": "Frameworks:",
+  "frameworks_lista": "Angular, NestJS, ASP.NET Core...",
+  "lenguajes": "Languages:",
+  "lenguajes_lista": "Java, Python, C...",
+  "haz_clic": "Click to see more",
+  "soft_skills": "Soft Skills",
+  "trabajo_equipo": "Teamwork",
+  "facilidad_idiomas": "Ease of learning languages",
+  "hard_skills": "Hard Skills",
+  "desarrollo_fullstack": "Fullstack Development",
+  "troubleshooting": "Troubleshooting",
+  "idiomas": "Languages",
+  "ingles": "English (High Level)",
+  "portugues": "Portuguese (Native)",
+  "experiencia": "Experience",
+  "practicas": "Internship | Vitaly",
+  "frontend_angular": "FrontEnd Development in Angular + Bootstrap",
+  "educacion": "Education",
+  "secundario": "High School",
+  "grado_superior": "Advanced Vocational Training"
 }
