--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -1,5 +1,34 @@
 {
   "about": "Sobre mí",
   "projects": "Proyectos",
-  "contact": "Contacto"
+  "contact": "Contacto",
+  "navbar_brand": "Levijcdf",
+  "navbar_caracteristicas": "MIS CARACTERÍSTICAS",
+  "navbar_about": "SOBRE MÍ",
+  "navbar_contact": "CONTÁCTAME",
+  "nombre": "Levi Josué Candeias de Figueiredo",
+  "titulo": "Desarrollador Web Fullstack",
+  "presentacion": "Apasionado de las tecnologías, con experiencia en desarrollo de aplicaciones SPA modernas y APIs Rest seguras.Siempre aprendiendo y buscando aportar valor real a los proyectos.",
+  "perfil_tecnico": "PERFIL TÉCNICO Y PERSONAL",
+  "tecnologias": "Tecnologías",
+  "frameworks": "Frameworks:",
+  "frameworks_lista": "Angular, NestJS, ASP.NET Core...",
+  "lenguajes": "Lenguajes:",
+  "lenguajes_lista": "Java, Python, C...",
+  "haz_clic": "Haz clic para ver más",
+  "soft_skills": "Soft Skills",
+  "trabajo_equipo": "Trabajo en equipo",
+  "facilidad_idiomas": "Facilidad en aprender idiomas",
+  "hard_skills": "Hard Skills",
+  "desarrollo_fullstack": "Desarrollo Fullstack",
+  "troubleshooting": "Troubleshooting",
+  "idiomas": "Idiomas",
+  "ingles": "Inglés (Alto Nivel)",
+  "portugues": "Portugués (Lengua Materna)",
+  "experiencia": "Experiencia",
+  "practicas": "Prácticas | Vitaly",
+  "frontend_angular": "Desarrollo FrontEnd en Angular + Bootstrap",
+  "educacion": "Educación",
+  "secundario": "Ensino Secundário",
+  "grado_superior": "Ciclo Formativo de Grado Superior"
 }
