--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -1,5 +1,34 @@
 {
   "about": "Sobre mim",
   "projects": "Projetos",
-  "contact": "Contato"
+  "contact": "Contato",
+  "navbar_brand": "Levijcdf",
+  "navbar_caracteristicas": "MINHAS CARACTERÍSTICAS",
+  "navbar_about": "SOBRE MIM",
+  "navbar_contact": "CONTACTE-ME",
+  "nombre": "Levi Josué Candeias de Figueiredo",
+  "titulo": "Desenvolvedor Web Fullstack",
+  "presentacion": "Apaixonado por tecnologia, com experiência no desenvolvimento de aplicações SPA modernas e APIs Rest seguras.Sempre aprendendo e buscando agregar valor real aos projetos.",
+  "perfil_tecnico": "PERFIL TÉCNICO E PESSOAL",
+  "tecnologias": "Tecnologias",
+  "frameworks": "Frameworks:",
+  "frameworks_lista": "Angular, NestJS, ASP.NET Core...",
+  "lenguajes": "Linguagens:",
+  "lenguajes_lista": "Java, Python, C...",
+  "haz_clic": "Clique para ver mais",
+  "soft_skills": "Soft Skills",
+  "trabajo_equipo": "Trabalho em equipe",
+  "facilidad_idiomas": "Facilidade em aprender idiomas",
+  "hard_skills": "Hard Skills",
+  "desarrollo_fullstack": "Desenvolvimento Fullstack",
+  "troubleshooting": "Resolução de problemas",
+  "idiomas": "Idiomas",
+  "ingles": "Inglês (Nível Avançado)",
+  "portugues": "Português (Nativo)",
+  "experiencia": "Experiência",
+  "practicas": "Estágio | Vitaly",
+  "frontend_angular": "Desenvolvimento FrontEnd em Angular + Bootstrap",
+  "educacion": "Educação",
+  "secundario": "Ensino Secundário",
+  "grado_superior": "Curso Técnico Superior Profissional"
 }
