Finalizacion de la traduccion

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -30,5 +30,77 @@
   "frontend_angular": "FrontEnd Development in Angular + Bootstrap",
   "educacion": "Education",
   "secundario": "High School",
-  "grado_superior": "Advanced Vocational Training"
+  "grado_superior": "Advanced Vocational Training",
+  "sobre_mi": "About me",
+  "quien_soy_titulo": "Who am I?",
+  "quien_soy_texto": "I am a Web Developer and enthusiast of operating systems and cybersecurity. Since I can remember, I have been passionate about new technologies and innovation. I love the world of video games and everything related to fiction, and I always look for ways to integrate my passions into my projects.",
+  "como_trabajo_titulo": "How do I work?",
+  "como_trabajo_texto": "My priority is to meet your company's needs while providing efficient and quality service. You can count on me to solve your problems and provide clarifications whenever you need them.",
+  "donde_me_desplazo_titulo": "Where do I travel?",
+  "donde_me_desplazo_texto": "I am willing to travel throughout Extremadura and Alentejo if necessary to solve any kind of problem. I live in Elvas, Portugal, so I will prioritize closer trips.",
+  "objetivo_profesional_titulo": "Professional Objective",
+  "objetivo_profesional_texto": "I hope to develop my skills in the field of IT and grow both personally and professionally.",
+  "resumen_titulo": "Summary",
+  "resumen_texto": "I am motivated to keep learning, add real value wherever I work, and grow both professionally and personally. I hope to contribute with my skills, attitude, and commitment to the success of the team and the projects I participate in.",
+  "contactame": "Contact me",
+  "contacto_ayuda": "I'm here to help you!",
+  "contacto_consulta": "You can contact me for any inquiry or project you are interested in.",
+  "info_contacto": "Contact Information",
+  "correo_electronico": "Email:",
+  "numeros_telefono": "Phone Numbers:",
+  "contacto_dudas": "Feel free to contact me to discuss your ideas!",
+  "mi_direccion": "My address",
+  "direccion": "Rua Dom Augusto Eduardo Nunes, S/N - Vivenda Figueiredo - Elvas, Portalegre, Portugal",
+  "info_adicional": "Additional Information",
+  "disponible_freelance": "Available for freelance projects and collaborations.",
+  "encuentrame": "Find me",
+  "copyright": "Copyright © Levi Josué Candeias de Figueiredo 2024",
+  "modal_tecnologias_titulo": "Technologies",
+  "modal_frameworks": "Frameworks",
+  "modal_frameworks_lista": "Angular, NestJS, ASP.NET Core, Java Springboot, Next.JS",
+  "modal_lenguajes": "Languages",
+  "modal_lenguajes_lista": "Java, Python, C, Bash, TypeScript, PHP",
+  "modal_bd": "Databases",
+  "modal_bd_lista": "MySQL, MariaDB, PostgreSQL, SQL Server, Oracle",
+  "modal_desktop": "Desktop Applications",
+  "modal_desktop_lista": "Java Swing, JavaFX, Electron",
+  "modal_os": "Operating Systems",
+  "modal_os_lista": "Linux Debian, Fedora, Arch",
+  "modal_ia": "Artificial Intelligence",
+  "modal_ia_lista": "Cursor, Windsurf",
+  "modal_despliegue": "Deployment",
+  "modal_despliegue_lista": "Apache",
+  "modal_softskills_titulo": "Soft Skills",
+  "modal_softskills_1": "Teamwork",
+  "modal_softskills_2": "Ease of learning languages",
+  "modal_softskills_3": "Self-discipline",
+  "modal_softskills_4": "Communication",
+  "modal_softskills_5": "Adaptability",
+  "modal_softskills_6": "Self-taught",
+  "modal_softskills_7": "Willingness to learn new technologies and adapt to company practices",
+  "modal_hardskills_titulo": "Hard Skills",
+  "modal_hardskills_1": "Fullstack Development",
+  "modal_hardskills_2": "Troubleshooting",
+  "modal_hardskills_3": "Development of secure and efficient RESTful APIs",
+  "modal_hardskills_4": "UI Design",
+  "modal_hardskills_5": "Application deployment on hosting",
+  "modal_idiomas_titulo": "Languages",
+  "modal_idiomas_portugues": "Portuguese",
+  "modal_idiomas_portugues_nivel": "Native",
+  "modal_idiomas_castellano": "Spanish",
+  "modal_idiomas_castellano_nivel": "Native",
+  "modal_idiomas_ingles": "English",
+  "modal_idiomas_ingles_nivel": "High Level",
+  "modal_experiencia_titulo": "Experience",
+  "modal_experiencia_practicas": "Internship Vitaly",
+  "modal_experiencia_fecha": "January 2025 - June 2025",
+  "modal_experiencia_1": "FrontEnd Development in Angular and Bootstrap",
+  "modal_experiencia_2": "Maintenance of RESTful APIs in SpringBoot",
+  "modal_experiencia_3": "Oracle DB Administration",
+  "modal_experiencia_4": "Maintenance of Java SpringBoot Microservices",
+  "modal_educacion_titulo": "Education",
+  "modal_educacion_secundario": "High School",
+  "modal_educacion_secundario_detalle": "Science and Technology Track, Escola Secundaria D. Sancho II, Elvas, Portugal, 2020-2023",
+  "modal_educacion_grado": "Advanced Vocational Training",
+  "modal_educacion_grado_detalle": "Web Application Development, Escuela Virgen de Guadalupe, Badajoz, 2023-2025"
 }
