--- a/assets/locales/es.json
+++ b/assets/locales/es.json
@@ -30,5 +30,77 @@
   "frontend_angular": "Desarrollo FrontEnd en Angular + Bootstrap",
   "educacion": "Educación",
   "secundario": "Ensino Secundário",
-  "grado_superior": "Ciclo Formativo de Grado Superior"
+  "grado_superior": "Ciclo Formativo de Grado Superior",
+  "sobre_mi": "Sobre mí",
+  "quien_soy_titulo": "¿Quién Soy?",
+  "quien_soy_texto": "Soy un Desarrollador Web y entusiasta de sistemas operativos y ciberseguridad. Desde que tengo memoria, he sido un apasionado de las nuevas tecnologías y la innovación. Me encanta el mundo de los videojuegos y todo lo que rodea la ficción, y siempre busco maneras de integrar mis pasiones en mis proyectos.",
+  "como_trabajo_titulo": "¿Cómo trabajo?",
+  "como_trabajo_texto": "Mi prioridad es satisfacer las necesidades de su empresa mientras ofrezco un servicio eficiente y de calidad. Puede contar conmigo para resolver sus problemas y brindarle aclaraciones siempre que lo necesite.",
+  "donde_me_desplazo_titulo": "¿Dónde me desplazo?",
+  "donde_me_desplazo_texto": "Estoy dispuesto a desplazarme por Extremadura y Alentejo si es necesario para resolver cualquier tipo de problema. Resido en Elvas, Portugal, por lo que priorizaré los desplazamientos más cercanos.",
+  "objetivo_profesional_titulo": "Objetivo Profesional",
+  "objetivo_profesional_texto": "Espero poder desarrollar mis habilidades en el campo de la informática y crecer tanto a nivel personal como profesional.",
+  "resumen_titulo": "Resumen",
+  "resumen_texto": "Estoy motivado por seguir aprendiendo, aportar valor real allí donde trabaje y crecer tanto profesional como personalmente. Espero poder contribuir con mis habilidades, actitud y compromiso al éxito del equipo y de los proyectos en los que participe.",
+  "contactame": "Contáctame",
+  "contacto_ayuda": "¡Estoy aquí para ayudarte!",
+  "contacto_consulta": "Puedes comunicarte conmigo para cualquier consulta o proyecto en el que estés interesado.",
+  "info_contacto": "Información de Contacto",
+  "correo_electronico": "Correo Electrónico:",
+  "numeros_telefono": "Números de Teléfono:",
+  "contacto_dudas": "¡No dudes en contactarme para discutir tus ideas!",
+  "mi_direccion": "Mi dirección",
+  "direccion": "Rua Dom Augusto Eduardo Nunes, S/N - Vivenda Figueiredo - Elvas, Portalegre, Portugal",
+  "info_adicional": "Información Adicional",
+  "disponible_freelance": "Disponible para proyectos freelance y colaboraciones.",
+  "encuentrame": "Encuéntrame",
+  "copyright": "Copyright © Levi Josué Candeias de Figueiredo 2024",
+  "modal_tecnologias_titulo": "Tecnologías",
+  "modal_frameworks": "Frameworks",
+  "modal_frameworks_lista": "Angular, NestJS, ASP.NET Core, Java Springboot, Next.JS",
+  "modal_lenguajes": "Lenguajes",
+  "modal_lenguajes_lista": "Java, Python, C, Bash, TypeScript, PHP",
+  "modal_bd": "Bases de datos",
+  "modal_bd_lista": "MySQL, MariaDB, PostgreSQL, SQL Server, Oracle",
+  "modal_desktop": "Aplicaciones de escritorio",
+  "modal_desktop_lista": "Java Swing, JavaFX, Electron",
+  "modal_os": "Sistemas operativos",
+  "modal_os_lista": "Linux Debian, Fedora, Arch",
+  "modal_ia": "Inteligencia Artificial",
+  "modal_ia_lista": "Cursor, Windsurf",
+  "modal_despliegue": "Despliegue",
+  "modal_despliegue_lista": "Apache",
+  "modal_softskills_titulo": "Soft Skills",
+  "modal_softskills_1": "Trabajo en equipo",
+  "modal_softskills_2": "Facilidad en aprender idiomas",
+  "modal_softskills_3": "Autodisciplina",
+  "modal_softskills_4": "Comunicación",
+  "modal_softskills_5": "Adaptabilidad",
+  "modal_softskills_6": "Autodidacta",
+  "modal_softskills_7": "Disposición a aprender nuevas tecnologías y adaptarme a las prácticas de la empresa",
+  "modal_hardskills_titulo": "Hard Skills",
+  "modal_hardskills_1": "Desarrollo Fullstack",
+  "modal_hardskills_2": "Troubleshooting",
+  "modal_hardskills_3": "Desarrollo de APIs Restful seguras y eficientes",
+  "modal_hardskills_4": "Diseño de interfaces gráficas",
+  "modal_hardskills_5": "Despliegue de aplicaciones en hosting",
+  "modal_idiomas_titulo": "Idiomas",
+  "modal_idiomas_portugues": "Portugués",
+  "modal_idiomas_portugues_nivel": "Nativo",
+  "modal_idiomas_castellano": "Castellano",
+  "modal_idiomas_castellano_nivel": "Nativo",
+  "modal_idiomas_ingles": "Inglés",
+  "modal_idiomas_ingles_nivel": "Alto Nivel",
+  "modal_experiencia_titulo": "Experiencia",
+  "modal_experiencia_practicas": "Prácticas Vitaly",
+  "modal_experiencia_fecha": "Enero 2025 - Junio 2025",
+  "modal_experiencia_1": "Desarrollo FrontEnd en Angular y Bootstrap",
+  "modal_experiencia_2": "Mantenimiento de APIs Restful en SpringBoot",
+  "modal_experiencia_3": "Administración de BD Oracle",
+  "modal_experiencia_4": "Mantenimiento de Microservicios Java SpringBoot",
+  "modal_educacion_titulo": "Educación",
+  "modal_educacion_secundario": "Ensino Secundário",
+  "modal_educacion_secundario_detalle": "Curso Cientifico-Humanistico de Ciencias e Tecnologias, Escola Secundaria D. Sancho II, Elvas, Portugal, 2020-2023",
+  "modal_educacion_grado": "Ciclo Formativo de Grado Superior",
+  "modal_educacion_grado_detalle": "Desarrollo de Aplicaciones Web, Escuela Virgen de Guadalupe, Badajoz, 2023-2025"
 }
