--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -30,5 +30,77 @@
   "frontend_angular": "Desenvolvimento FrontEnd em Angular + Bootstrap",
   "educacion": "Educação",
   "secundario": "Ensino Secundário",
-  "grado_superior": "Curso Técnico Superior Profissional"
+  "grado_superior": "Curso Técnico Superior Profissional",
+  "sobre_mi": "Sobre mim",
+  "quien_soy_titulo": "Quem sou eu?",
+  "quien_soy_texto": "Sou um Desenvolvedor Web e entusiasta de sistemas operacionais e cibersegurança. Desde que me lembro, sou apaixonado por novas tecnologias e inovação. Adoro o mundo dos videogames e tudo o que envolve ficção, e sempre procuro maneiras de integrar minhas paixões nos meus projetos.",
+  "como_trabajo_titulo": "Como trabalho?",
+  "como_trabajo_texto": "Minha prioridade é satisfazer as necessidades da sua empresa enquanto ofereço um serviço eficiente e de qualidade. Pode contar comigo para resolver seus problemas e fornecer esclarecimentos sempre que precisar.",
+  "donde_me_desplazo_titulo": "Onde me desloco?",
+  "donde_me_desplazo_texto": "Estou disposto a me deslocar por toda a Extremadura e Alentejo, se necessário, para resolver qualquer tipo de problema. Resido em Elvas, Portugal, por isso priorizarei deslocamentos mais próximos.",
+  "objetivo_profesional_titulo": "Objetivo Profissional",
+  "objetivo_profesional_texto": "Espero poder desenvolver minhas habilidades na área de TI e crescer tanto pessoal quanto profissionalmente.",
+  "resumen_titulo": "Resumo",
+  "resumen_texto": "Estou motivado a continuar aprendendo, agregar valor real onde quer que trabalhe e crescer tanto profissional quanto pessoalmente. Espero poder contribuir com minhas habilidades, atitude e compromisso para o sucesso da equipe e dos projetos em que participar.",
+  "contactame": "Contacte-me",
+  "contacto_ayuda": "Estou aqui para te ajudar!",
+  "contacto_consulta": "Pode entrar em contato comigo para qualquer dúvida ou projeto que tenha interesse.",
+  "info_contacto": "Informações de Contato",
+  "correo_electronico": "Email:",
+  "numeros_telefono": "Números de Telefone:",
+  "contacto_dudas": "Não hesite em me contactar para discutir suas ideias!",
+  "mi_direccion": "Meu endereço",
+  "direccion": "Rua Dom Augusto Eduardo Nunes, S/N - Vivenda Figueiredo - Elvas, Portalegre, Portugal",
+  "info_adicional": "Informação Adicional",
+  "disponible_freelance": "Disponível para projetos freelance e colaborações.",
+  "encuentrame": "Encontre-me",
+  "copyright": "Copyright © Levi Josué Candeias de Figueiredo 2024",
+  "modal_tecnologias_titulo": "Tecnologias",
+  "modal_frameworks": "Frameworks",
+  "modal_frameworks_lista": "Angular, NestJS, ASP.NET Core, Java Springboot, Next.JS",
+  "modal_lenguajes": "Linguagens",
+  "modal_lenguajes_lista": "Java, Python, C, Bash, TypeScript, PHP",
+  "modal_bd": "Bases de dados",
+  "modal_bd_lista": "MySQL, MariaDB, PostgreSQL, SQL Server, Oracle",
+  "modal_desktop": "Aplicações de desktop",
+  "modal_desktop_lista": "Java Swing, JavaFX, Electron",
+  "modal_os": "Sistemas operativos",
+  "modal_os_lista": "Linux Debian, Fedora, Arch",
+  "modal_ia": "Inteligência Artificial",
+  "modal_ia_lista": "Cursor, Windsurf",
+  "modal_despliegue": "Deploy",
+  "modal_despliegue_lista": "Apache",
+  "modal_softskills_titulo": "Soft Skills",
+  "modal_softskills_1": "Trabalho em equipa",
+  "modal_softskills_2": "Facilidade em aprender idiomas",
+  "modal_softskills_3": "Autodisciplina",
+  "modal_softskills_4": "Comunicação",
+  "modal_softskills_5": "Adaptabilidade",
+  "modal_softskills_6": "Autodidata",
+  "modal_softskills_7": "Disponibilidade para aprender novas tecnologias e adaptar-me às práticas da empresa",
+  "modal_hardskills_titulo": "Hard Skills",
+  "modal_hardskills_1": "Desenvolvimento Fullstack",
+  "modal_hardskills_2": "Resolução de problemas",
+  "modal_hardskills_3": "Desenvolvimento de APIs Restful seguras e eficientes",
+  "modal_hardskills_4": "Design de interfaces gráficas",
+  "modal_hardskills_5": "Deploy de aplicações em alojamento",
+  "modal_idiomas_titulo": "Idiomas",
+  "modal_idiomas_portugues": "Português",
+  "modal_idiomas_portugues_nivel": "Nativo",
+  "modal_idiomas_castellano": "Castelhano",
+  "modal_idiomas_castellano_nivel": "Nativo",
+  "modal_idiomas_ingles": "Inglês",
+  "modal_idiomas_ingles_nivel": "Nível Avançado",
+  "modal_experiencia_titulo": "Experiência",
+  "modal_experiencia_practicas": "Estágio Vitaly",
+  "modal_experiencia_fecha": "Janeiro 2025 - Junho 2025",
+  "modal_experiencia_1": "Desenvolvimento FrontEnd em Angular e Bootstrap",
+  "modal_experiencia_2": "Manutenção de APIs Restful em SpringBoot",
+  "modal_experiencia_3": "Administração de BD Oracle",
+  "modal_experiencia_4": "Manutenção de Microserviços Java SpringBoot",
+  "modal_educacion_titulo": "Educação",
+  "modal_educacion_secundario": "Ensino Secundário",
+  "modal_educacion_secundario_detalle": "Curso Científico-Humanístico de Ciências e Tecnologias, Escola Secundária D. Sancho II, Elvas, Portugal, 2020-2023",
+  "modal_educacion_grado": "Curso Profissional de Nível Superior",
+  "modal_educacion_grado_detalle": "Desenvolvimento de Aplicações Web, Escola Virgen de Guadalupe, Badajoz, 2023-2025"
 }
