Modificações nos botões e nos estilos

--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -8,7 +8,7 @@
   "navbar_contact": "CONTACTE-ME",
   "nombre": "Levi Josué Candeias de Figueiredo",
   "titulo": "Desenvolvedor Web Fullstack",
-  "presentacion": "Apaixonado por tecnologia, com experiência no desenvolvimento de aplicações SPA modernas e APIs Rest seguras.Sempre aprendendo e buscando agregar valor real aos projetos.",
+  "presentacion": "Apaixonado por tecnologia, com experiência no desenvolvimento de aplicações SPA modernas e APIs Rest seguras. Sempre a aprender e a buscar como adicionar valor real aos projetos.",
   "perfil_tecnico": "PERFIL TÉCNICO E PESSOAL",
   "tecnologias": "Tecnologias",
   "frameworks": "Frameworks:",
@@ -33,15 +33,15 @@
   "grado_superior": "Curso Técnico Superior Profissional",
   "sobre_mi": "Sobre mim",
   "quien_soy_titulo": "Quem sou eu?",
-  "quien_soy_texto": "Sou um Desenvolvedor Web e entusiasta de sistemas operacionais e cibersegurança. Desde que me lembro, sou apaixonado por novas tecnologias e inovação. Adoro o mundo dos videogames e tudo o que envolve ficção, e sempre procuro maneiras de integrar minhas paixões nos meus projetos.",
+  "quien_soy_texto": "Sou um Desenvolvedor Web e entusiasta de sistemas operativos e cibersegurança. Desde que me lembro, sou apaixonado por novas tecnologias e inovação. Adoro o mundo dos videojogos e tudo o que envolve ficção, e sempre procuro maneiras de integrar as minhas paixões nos meus projetos.",
   "como_trabajo_titulo": "Como trabalho?",
-  "como_trabajo_texto": "Minha prioridade é satisfazer as necessidades da sua empresa enquanto ofereço um serviço eficiente e de qualidade. Pode contar comigo para resolver seus problemas e fornecer esclarecimentos sempre que precisar.",
+  "como_trabajo_texto": "A minha prioridade é satisfazer as necessidades da sua empresa enquanto ofereço um serviço eficiente e de qualidade. Pode contar comigo para resolver seus problemas e fornecer esclarecimentos sempre que precisar.",
   "donde_me_desplazo_titulo": "Onde me desloco?",
-  "donde_me_desplazo_texto": "Estou disposto a me deslocar por toda a Extremadura e Alentejo, se necessário, para resolver qualquer tipo de problema. Resido em Elvas, Portugal, por isso priorizarei deslocamentos mais próximos.",
+  "donde_me_desplazo_texto": "Estou disposto a  deslocar-me por toda a Extremadura e Alentejo, se necessário, para resolver qualquer tipo de problema. Resido em Elvas, Portugal, por isso priorizarei deslocamentos mais próximos.",
   "objetivo_profesional_titulo": "Objetivo Profissional",
   "objetivo_profesional_texto": "Espero poder desenvolver minhas habilidades na área de TI e crescer tanto pessoal quanto profissionalmente.",
   "resumen_titulo": "Resumo",
-  "resumen_texto": "Estou motivado a continuar aprendendo, agregar valor real onde quer que trabalhe e crescer tanto profissional quanto pessoalmente. Espero poder contribuir com minhas habilidades, atitude e compromisso para o sucesso da equipe e dos projetos em que participar.",
+  "resumen_texto": "Estou motivado a continuar a aprender, adicionar valor real onde quer que trabalhe e crescer tanto profissional quanto pessoalmente. Espero poder contribuir com minhas habilidades, atitude e compromisso para o sucesso da equipa e dos projetos em que participar.",
   "contactame": "Contacte-me",
   "contacto_ayuda": "Estou aqui para te ajudar!",
   "contacto_consulta": "Pode entrar em contato comigo para qualquer dúvida ou projeto que tenha interesse.",
