--- a/assets/locales/pt.json
+++ b/assets/locales/pt.json
@@ -3,7 +3,7 @@
   "projects": "Projetos",
   "contact": "Contato",
   "navbar_brand": "Levijcdf",
-  "navbar_caracteristicas": "MINHAS CARACTERÍSTICAS",
+  "navbar_caracteristicas": "CARACTERÍSTICAS",
   "navbar_about": "SOBRE MIM",
   "navbar_contact": "CONTACTE-ME",
   "nombre": "Levi Josué Candeias de Figueiredo",
